--- a/2D_visualizer.ipynb
+++ b/2D_visualizer.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "You should replace the raw and label paths with your own paths to the mha files you want to display. The raw path is for the original MRI while the label path is for a file with specific regions annotated (tumor, lumen, etc.) \n",
     "<br><br>\n",
-    "The label_volume array we just created is full of numbers representing different labels. 0 indicates nothing and 1 is for tumor. For this example,we only want to model the tumor region, so any other numbers should be changed to 0."
+    "The label_volume array we just created is full of numbers representing different labels. 0 indicates nothing and 1 is for tumor. For this example, we only want to model the tumor region, so any other numbers should be changed to 0."
    ]
   },
   {
@@ -106,7 +106,7 @@
     "fig, ax = plt.subplots(1,2)\n",
     "fig.tight_layout()\n",
     "\n",
-    "slice_num = 80\n",
+    "slice_num = 80 # Change this to the slice you want to view\n",
     "\n",
     "raw = mri_volume[slice_num]\n",
     "mask = tumor[slice_num]\n",
