--- a/3D_visualizer.ipynb
+++ b/3D_visualizer.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use the code below to save the generated plotly model to an HTML file which will keeo the interactive component. With the HTML file, you can open it in your browser and embed it into a website."
+    "You can use the code below to save the generated plotly model to an HTML file which will keep the interactive component. You can open this HTML file in your browser. You could also display this model on a website."
    ]
   },
   {
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "# Save plotly figure to html file\n",
-    "fig.write_html(\"saved_plots/example_plot.html\")"
+    "fig.write_html(\"path/to/save/file/example_plot.html\")"
    ]
   }
  ],
